# Focus

./: .gitignore  CMakeLists.txt  README.md
src/: GAME.c  GAME.h  GAME_SETUP.c  GAME_SETUP.h  USER_INTERFACE.c  USER_INTERFACE.h  UserInterface.c  UserInterface.h  main.c
